--- a/tip-creators-dotsol/package.json
+++ b/tip-creators-dotsol/package.json
@@ -35,20 +35,25 @@
     "@rn-primitives/portal": "^1.3.0",
     "@solana-mobile/mobile-wallet-adapter-protocol": "^2.2.2",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.2.2",
+    "@solana/pay": "^0.2.6",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
     "@tanstack/react-query": "^5.80.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@wallet-standard/core": "^1.1.1",
     "expo": "~53.0.16",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.6",
     "expo-crypto": "^14.1.5",
-    "expo-dev-client": "~5.2.3",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.6",
+    "expo-nfc": "^0.0.0",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
@@ -56,15 +61,19 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "js-base64": "^3.7.7",
+    "qrcode": "^1.5.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-snackbar": "^2.9.0",
     "react-native-svg": "^15.11.2",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-qr-code": "^2.0.16"
