--- a/tip-creators-dotsol/android/app/build.gradle
+++ b/tip-creators-dotsol/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.anonymous.tipcreatorsdotsol'
+    namespace 'com.solcreator.app'
     defaultConfig {
-        applicationId 'com.anonymous.tipcreatorsdotsol'
+        applicationId 'com.solcreator.app'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
