--- a/tip-creators-dotsol/android/settings.gradle
+++ b/tip-creators-dotsol/android/settings.gradle
@@ -31,7 +31,7 @@ extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
 }
 expoAutolinking.useExpoModules()
 
-rootProject.name = 'tip-creators-dotsol'
+rootProject.name = 'SolCreator'
 
 expoAutolinking.useExpoVersionCatalog()
 
