--- a/tip-creators-dotsol/package.json
+++ b/tip-creators-dotsol/package.json
@@ -39,10 +39,10 @@
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
     "@tanstack/react-query": "^5.80.6",
+    "@types/mocha": "^10.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "@wallet-standard/core": "^1.1.1",
     "expo": "~53.0.16",
-    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.6",
@@ -53,7 +53,6 @@
     "expo-image": "~2.3.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.6",
-    "expo-nfc": "^0.0.0",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
